--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
 		<script src="/js/controllers/boardsController.js"></script>		
 		<script src="/js/controllers/workflowController.js"></script>
 		<script src="/js/controllers/teamController.js"></script>
+		<script src="/js/controllers/signupController.js"></script>
 	</body>
 </html>
