--- a/html/signup.html
+++ b/html/signup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <title>Odyssey Signup</title>
 <link href="/css/signup.css" rel="stylesheet">
-<body ng-controller="loginController">
+<body ng-controller="signupController">
 <div class="container">        
     <div class="signup-container col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3"> 
         <div class="panel panel-default" >
@@ -9,7 +9,7 @@
                 <h1 class="panel-title text-center">Join Odyssey!</h1>
             </div>     
             <div class="panel-body" >
-                <form ng-submit="addNewUser()" name="form" id="form" class="form-horizontal" enctype="multipart/form-data" method="POST">                	
+                <form ng-submit="signupUser()" name="form" id="form" class="form-horizontal">                	
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
                         <input type="email" class="form-control" ng-model="email" placeholder="Email">
@@ -30,7 +30,7 @@
                         <span class="input-group-addon"><i class="glyphicon glyphicon-briefcase"></i></span>
                         <input type="text" class="form-control" ng-model="title" placeholder="Ttile">
                     </div>                                                                                  
-                    <button class="btn btn-success btn-block login-button" type="submit">Login</button>
+                    <button class="btn btn-success btn-block signup-button" type="submit">Sign Up!</button>
                 </form>     
             </div>                     
         </div>  
