--- a/html/team.html
+++ b/html/team.html
@@ -8,26 +8,26 @@
 		    <div class="navbar-toggler animate">
 		        <span class="menu-icon"></span>
 		    </div>
-		    <ul class="navbar-menu animate">
-		        <li>
-		            <a ng-href="/boards" class="animate">
-		                <span class="desc animate"> Boards </span>
-		                <span class="glyphicon glyphicon-th"></span>
-		            </a>
-		        </li>
-		        <li>
-		            <a href="/team" class="animate">
-		                <span class="desc animate"> Team </span>
-		                <span class="glyphicon glyphicon-user"></span>
-		            </a>
-		        </li>
-		        <li>
-		            <a href="#contact-us" class="animate">
-		                <span class="desc animate"> How To Reach Us </span>
-		                <span class="glyphicon glyphicon-comment"></span>
-		            </a>
-		        </li>
-		    </ul>
+	        <ul class="navbar-menu animate">
+	            <li>
+	                <a ng-href="/#/boards" class="animate">
+	                    <span class="desc animate"> Boards </span>
+	                    <span class="glyphicon glyphicon-th"></span>
+	                </a>
+	            </li>
+	            <li>
+	                <a href="/#/team" class="animate">
+	                    <span class="desc animate"> Team </span>
+	                    <span class="glyphicon glyphicon-user"></span>
+	                </a>
+	            </li>
+	            <li>
+	                <a href="#contact-us" class="animate">
+	                    <span class="desc animate"> How To Reach Us </span>
+	                    <span class="glyphicon glyphicon-comment"></span>
+	                </a>
+	            </li>
+	        </ul>
 		</nav>
 		<!-- -->
 
