--- a/html/workflow.html
+++ b/html/workflow.html
@@ -9,26 +9,26 @@
     <div class="navbar-toggler animate">
         <span class="menu-icon"></span>
     </div>
-    <ul class="navbar-menu animate">
-        <li>
-            <a ng-href="/boards" class="animate">
-                <span class="desc animate"> Boards </span>
-                <span class="glyphicon glyphicon-th"></span>
-            </a>
-        </li>
-        <li>
-            <a href="/team" class="animate">
-                <span class="desc animate"> Team </span>
-                <span class="glyphicon glyphicon-user"></span>
-            </a>
-        </li>
-        <li>
-            <a href="#contact-us" class="animate">
-                <span class="desc animate"> How To Reach Us </span>
-                <span class="glyphicon glyphicon-comment"></span>
-            </a>
-        </li>
-    </ul>
+        <ul class="navbar-menu animate">
+            <li>
+                <a ng-href="/#/boards" class="animate">
+                    <span class="desc animate"> Boards </span>
+                    <span class="glyphicon glyphicon-th"></span>
+                </a>
+            </li>
+            <li>
+                <a href="/#/team" class="animate">
+                    <span class="desc animate"> Team </span>
+                    <span class="glyphicon glyphicon-user"></span>
+                </a>
+            </li>
+            <li>
+                <a href="#contact-us" class="animate">
+                    <span class="desc animate"> How To Reach Us </span>
+                    <span class="glyphicon glyphicon-comment"></span>
+                </a>
+            </li>
+        </ul>
 </nav>
 
 <div class="container">       
@@ -124,8 +124,8 @@
                             <div style="float:right; width:45%;">
                                 <div class="input-group">
                                     <span class="input-group-addon success"><span class="glyphicon glyphicon-align-left"></span></span>
-                                    <select class="form-control input-lg">
-                                        <option value="workflow._id" ng-repeat="workflow in workflows" ng-selected="workflow.title==taskFormWorkflow.title">{{workflow.title}}</option>
+                                    <select class="form-control input-lg" ng-model="selectedWorkflowId">
+                                        <option ng-repeat="workflow in workflows" ng-selected="workflow.title==taskFormWorkflow.title" value="{{workflow._id}}">{{workflow.title}}</option>
                                     </select>
                                 </div>
                             </div>
