color coding implemented

--- a/html/boards.html
+++ b/html/boards.html
@@ -20,9 +20,9 @@
 		            </a>
 		        </li>
 		        <li>
-		            <a href="#contact-us" class="animate">
-		                <span class="desc animate"> How To Reach Us </span>
-		                <span class="glyphicon glyphicon-comment"></span>
+		            <a href="" class="animate" ng-click="logout()">
+		                <span class="desc animate"> Logout </span>
+		                <span class="glyphicon glyphicon-arrow-left"></span>
 		            </a>
 		        </li>
 		    </ul>
