--- a/html/team.html
+++ b/html/team.html
@@ -22,7 +22,7 @@
 	                </a>
 	            </li>
 	            <li>
-	                <a href="#contact-us" class="animate">
+	                <a href="/#/contact-us" class="animate">
 	                    <span class="desc animate"> How To Reach Us </span>
 	                    <span class="glyphicon glyphicon-comment"></span>
 	                </a>
@@ -55,9 +55,9 @@
 	                        </div>
 	                        <div class="input-group" style="margin:20px;">
 			                    <ul class="nav nav-pills">
-			                        <li role="presentation" class="admin-selector"><a href="#" ng-click="selectAdmin()"><i class="glyphicon glyphicon-chevron-up"></i> Admin</a>
+			                        <li role="presentation" class="admin-selector"><a href="" ng-click="selectAdmin()"><i class="glyphicon glyphicon-chevron-up"></i> Admin</a>
 			                        </li>
-			                        <li role="presentation" class="active non-admin-selector"><a href="#" ng-click="selectNonAdmin()"><i class="glyphicon glyphicon-chevron-down"></i> Normal</a>
+			                        <li role="presentation" class="active non-admin-selector"><a href="" ng-click="selectNonAdmin()"><i class="glyphicon glyphicon-chevron-down"></i> Normal</a>
 			                        </li>
 			                    </ul>
 		                	</div>
