--- a/html/boards.html
+++ b/html/boards.html
@@ -20,6 +20,12 @@
 		            </a>
 		        </li>
 		        <li>
+		            <a href="/#/report" class="animate">
+		                <span class="desc animate"> Report </span>
+		                <span class="glyphicon glyphicon-list"></span>
+		            </a>
+		        </li>
+		        <li>
 		            <a href="" class="animate" ng-click="logout()">
 		                <span class="desc animate"> Logout </span>
 		                <span class="glyphicon glyphicon-arrow-left"></span>
@@ -30,7 +36,7 @@
 
 		<!-- Button trigger modal -->
 		<button type="button" class="create-board-button" data-toggle="modal" data-target="#createBoardPopup">
-        <i class="glyphicon glyphicon-plus"></i>
+        	<i class="glyphicon glyphicon-plus"></i>  <i class="glyphicon glyphicon-th-large"></i>
 		</button>
 			<!-- Modal -->
 			<div class="modal fade" id="createBoardPopup" tabindex="-1" role="dialog"
@@ -53,26 +59,28 @@
 						<form role="form" ng-submit="submitBoardForm()" method="POST">
 							<div class="form-group">
 								<div class="input-group">
-										<span class="input-group-addon"><i class="fa fa-plus fa-fw"></i></span>
+									<span class="input-group-addon"><i class="fa fa-plus fa-fw"></i></span>
 									<input class="form-control"
-									id="exampleInputEmail1" ng-model="newBoardTitle" placeholder="Board Title"/>
+									id="exampleInputEmail1" ng-model="newBoardTitle" placeholder="Title"autocomplete="off"/>
+								</div>
+							</div>
+							<div class="form-group">
+								<div class="input-group">
+									<span class="input-group-addon"><i class="glyphicon glyphicon-tag"></i></span>
+									<input class="form-control"
+									ng-model="newBoardKey" placeholder="Board Key" autocomplete="off"/>
 								</div>
 							</div>
 							<div class="form-group">
 								<div class = "input-group">
 									<span class="input-group-addon"><i class="fa fa-pencil fa-fw"></i></span>
-									<input class="form-control"
-									id="exampleInputPassword1" ng-model="newBoardDescription" placeholder="Description"/>
-								</div>
-							</div>
-							<div class="form-group">
-								<div class = "input-group">
-									<span class="input-group-addon"><i class="fa fa-user fa-fw"></i></span>
-									<input class="form-control" id="exampleInputPassword1" placeholder="Members"/>
+									<textarea class="form-control"
+									id="exampleInputPassword1" ng-model="newBoardDescription" placeholder="Description" rows="3" autocomplete="off">
+									</textarea>
 								</div>
 							</div>
 							<div class="modal-footer">
-								<button type="submit" class="btn btn-primary">Submit</button>
+								<button type="submit" class="btn btn-primary" ng-disabled="!newBoardTitle && !newBoardKey">Create Board!</button>
 							</div>
 						</form>					
 					</div>
@@ -85,7 +93,7 @@
 					<a ng-href="/#/boards/{{board._id}}">
 						<div class="board">
 						<h3>{{board.title}}</h3>
-						<p>By: {{board.creator.username}}</p>
+						<p>Creator: {{board.creator.username}}</p>
 						<p>{{board.description}}</p>
 						<button type="button" class="btn btn-danger btn-md board-remove-button" ng-click="deleteBoard(board._id); $event.preventDefault()"><i class="glyphicon glyphicon-remove"></i></button>
 						<button type="button" class="btn btn-info btn-md board-edit-button" ng-click="editBoard(board); $event.preventDefault()"><i class="glyphicon glyphicon-cog"></i></button>
