--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+		<script src="http://mrrio.github.io/jsPDF/dist/jspdf.debug.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/2.0.16/jspdf.plugin.autotable.js"></script>
 	</head>
 	<body>
 		<div ng-view>
@@ -19,5 +21,6 @@
 		<script src="/js/controllers/workflowController.js"></script>
 		<script src="/js/controllers/teamController.js"></script>
 		<script src="/js/controllers/signupController.js"></script>
+		<script src="/js/controllers/reportController.js"></script>
 	</body>
 </html>
