--- a/html/login.html
+++ b/html/login.html
@@ -6,7 +6,7 @@
     <div id="loginbox" class="mainbox col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3"> 
         <div class="panel panel-default" >
             <div class="panel-heading">
-                <div class="panel-title text-center">Welcome!</div>
+                <div class="panel-title text-center">Welcome to Odyssey</div>
             </div>     
             <div class="panel-body" >
                 <form ng-submit="submit()" name="form" id="form" class="form-horizontal" enctype="multipart/form-data" method="POST">
